<resources>
    <string name="app_name" translatable="false">BookmarkHub</string>

    <!--> Sign up and sing in <-->
    <string name="username">Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_member_sign_in">Already member? Sign in</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="app_logo_description" translatable="false">App logo</string>
    <string name="auth_view_sentence">The place where you can store all your bookmarks.\nLogin or register.</string>

    <!--> Bottom menu<-->
    <string name="home" translatable="false">Home</string>
    <string name="add_bookmark">New bookmark</string>
    <string name="add_category">New category</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="url" translatable="false">URL</string>
    <string name="additional_info">Additional info</string>
    <string name="favicon_of_the_website">Favicon of the website</string>
    <string name="options">Options</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="sort_name_a_z">Sort by name A - Z</string>
    <string name="sort_name_z_a">Sort by name Z - A</string>
    <string name="sort_date_ascending">Sort by date ascending</string>
    <string name="sort_date_descending">Sort by date descending</string>
    <string name="sorting">Sorting</string>
    <string name="category_name">Category name</string>

    <!--> Settings <-->
    <string name="user_interface">User interface</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="select_language">Select language</string>
    <string name="night_mode">Night mode</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Italian</item>
    </string-array>

    <!--> Firebase authentication errors<-->
    <string name="sign_up_failure">Sign up failed</string>
    <string name="sign_in_failure">Sign in failed</string>
    <string name="update_user_info_failure">The username could not be updated</string>
    <string name="email_password_not_empty">Email and password fields cannot be empty</string>
    <string name="password_not_empty">Password field cannot be empty</string>
    <string name="confirm_password_not_empty">Confirm password field cannot be empty</string>
    <string name="password_match_error">Passwords do not coincide</string>
    <string name="username_not_empty">Username field cannot be empty</string>
    <string name="logout_failure">Error during logout</string>

    <!--> Firestore bookmarks errors<-->
    <string name="add_bookmark_failure">Error inserting bookmark</string>
    <string name="delete_bookmark_failure">Error deleting bookmark</string>
    <string name="modify_bookmark_failure">Error modifying bookmark</string>

    <!--> Firestore categories errors<-->
    <string name="categories_retrieve_failure">Error fetching categories</string>
    <string name="duplicated_category">This category already exists; change the name</string>
    <string name="add_category_failure">Error inserting category</string>
    <string name="delete_category_failure">Error deleting category</string>
    <string name="modify_category_failure">Error modifying bookmark</string>
    <string name="category_name_not_empty">Category name field cannot be empty</string>

    <!--> Fragments<-->
    <string name="confirm_dialog">Confirm</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="add_category_dialog">Add category</string>
    <string name="invalid_url">The inserted URL is not valid</string>
    <string name="bookmark_added">Bookmark inserted successfully</string>
    <string name="category_added">Category inserted successfully</string>
    <string name="confirm_category_deletion">Are you sure you want to delete this category and all its content?</string>
    <string name="category">category</string>
    <string name="deleted">deleted</string>
    <string name="bookmark">bookmark</string>
    <string name="category_deleted">Category \'%s\' deleted</string>
    <string name="bookmark_deleted">Bookmark \'%s\' deleted</string>
    <string name="confirm_bookmark_deletion">Are you sure you want to delete this bookmark?</string>
    <string name="bookmark_modified">Bookmark modified successfully</string>
    <string name="category_modified">Category modified successfully</string>
    <string name="modify_category">Change the name of category</string>
    <string name="modify_bookmark">Change data of bookmark</string>
    <string name="bookmark_modification_error">You have to modify at least one field</string>
    <string name="category_modification_error">You have to modify the name</string>
    <string name="empty_home">There is nothing here…\nTo add a new category, use the button below</string>
    <string name="fields_not_empty">Name and URL fields cannot be empty</string>

    <string name="close_app">Are you sure you want to quit %1$s application?</string>
    <string name="no_bookmarks">There is nothing here…\nUse the bottom menu to insert a new bookmark</string>
    <string name="no_category_defined">You must first create at least one category</string>

    <!--> No internet <-->
    <string name="no_internet_connection">No connection</string>
    <string name="no_internet_connection_msg">Internet connection is not available. Wait for the connection to be restored or check the settings.</string>
    <string name="add_bookmark_dialog">Add bookmark</string>
</resources>