<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort_menu"
        android:icon="@drawable/sort_icon"
        android:title="@string/sorting"
        android:visible="true"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/name_ascending"
                android:checkable="true"
                android:checkableBehavior="single"
                android:checked="false"
                android:title="@string/sort_name_a_z" />
            <item
                android:id="@+id/name_descending"
                android:checkable="true"
                android:checkableBehavior="single"
                android:checked="false"
                android:title="@string/sort_name_z_a" />
            <item
                android:id="@+id/date_ascending"
                android:checkable="true"
                android:checkableBehavior="single"
                android:checked="false"
                android:title="@string/sort_date_ascending" />
            <item
                android:id="@+id/date_descending"
                android:checkable="true"
                android:checkableBehavior="single"
                android:checked="false"
                android:title="@string/sort_date_descending" />
        </menu>
    </item>
</menu>
